; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/core/extr_sysfs.c_interface_authorized_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/core/extr_sysfs.c_interface_authorized_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.usb_interface = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @interface_authorized_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @interface_authorized_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.usb_interface*, align 8
  %11 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.device*, %struct.device** %6, align 8
  %13 = call %struct.usb_interface* @to_usb_interface(%struct.device* %12)
  store %struct.usb_interface* %13, %struct.usb_interface** %10, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i64 @strtobool(i8* %14, i32* %11)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %4
  %18 = load i64, i64* @EINVAL, align 8
  %19 = sub i64 0, %18
  store i64 %19, i64* %5, align 8
  br label %31

20:                                               ; preds = %4
  %21 = load i32, i32* %11, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load %struct.usb_interface*, %struct.usb_interface** %10, align 8
  %25 = call i32 @usb_authorize_interface(%struct.usb_interface* %24)
  br label %29

26:                                               ; preds = %20
  %27 = load %struct.usb_interface*, %struct.usb_interface** %10, align 8
  %28 = call i32 @usb_deauthorize_interface(%struct.usb_interface* %27)
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i64, i64* %9, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %29, %17
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local %struct.usb_interface* @to_usb_interface(%struct.device*) #1

declare dso_local i64 @strtobool(i8*, i32*) #1

declare dso_local i32 @usb_authorize_interface(%struct.usb_interface*) #1

declare dso_local i32 @usb_deauthorize_interface(%struct.usb_interface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
